# Dynamix

./: ARCHITECTURE  CHANGELOG  CMakeLists.txt  README.html  README.md  chisq.c  crosen.c  data.csv  datatypes.c  emf.eps  main.c  models.c  rd  read_data.c  smf.eps
2016system/: .~lock.RelaxationData-New-2016-Feb.xlsx#  1000_R1_287_60_0.csv  1000_R1p_286_60_14.csv  1000_R1p_286_60_18.csv  1000_R1p_286_60_23.csv  500_R1_300.15_60_0.csv  500_R1p_279.65_50_17.csv  500_R1p_284.65_50_17.csv  500_R1p_300.15_60_10.csv  600_R1_270.95_50_0.csv  600_R1_282.4_50_0.csv  600_R1_291.75_50_0.csv  600_R1_300.15_33_10.csv  600_R1_300.15_39_10.csv  600_R1_300.15_50_10.csv  600_R1_300.15_56_10.csv  600_R1_300.7_50_0.csv  600_R1_300_60_0.csv  600_R1_307.55_50_0.csv  600_R1p_268_50_8.csv  600_R1p_270.45_50_8.csv  600_R1p_280.6_50_8.csv  600_R1p_284.7_50_8.csv  600_R1p_290.15_50_8.csv  600_R1p_294.3_50_8.csv  600_R1p_300.15_50_15.csv  600_R1p_300_60_17.csv  600_R1p_301_50_8.csv  600_R1p_305.7_50_8.csv  700_R1_277.95_50_0.csv  700_R1_298.95_50_0.csv  700_R1p_209.05_50_10.17.csv  700_R1p_278.25_50_10.1.csv  700_R1p_290.35_50_10.18.csv  700_R1p_294.35_50_10.13.csv  700_R1p_298.95_50_10.25.csv  800_R1_282_60_0.csv  800_R1p_293_60_15.csv  850_R1_277.8_50_0.csv  850_R1_289.1_50_0.csv  (+60 more)
Tests/: float128  float128.c  ld  ld.c
data/: emf.eps  emft.eps  smf.eps  smft.eps
emf/: emf.eps
src/: Doxyfile  anneal.c  anneal.h  chisq.c  chisq.h  correlation.c  correlation.h  crosen.c  crosen.h  datatypes.c  datatypes.h  errors.c  errors.h  global_gaf.c  global_gaf.h  main.c  main.h  models.c  predict_rate.c  predict_rate.h  read_data.c  read_data.h  rotation_tests.c  runners.c  runners.h  test.c  verification.c  verification.h
system/: 15N_R1_600_50_0_271.csv  15N_R1_600_50_0_282.csv  15N_R1_600_50_0_292.csv  15N_R1_600_50_0_301.csv  15N_R1_600_50_0_308.csv  15N_R1_700_50_0_299.csv  15N_R1_850_50_0_298.csv  15N_R1p_600_50_8_268.csv  15N_R1p_600_50_8_270.csv  15N_R1p_600_50_8_281.csv  15N_R1p_600_50_8_285.csv  15N_R1p_600_50_8_290.csv  15N_R1p_600_50_8_294.csv  15N_R1p_600_50_8_301.csv  15N_R1p_700_50_10_278.csv  15N_R1p_700_50_10_290.csv  15N_R1p_700_50_10_294.csv  15N_R1p_700_50_10_299.csv  15N_R1p_700_50_10_309.csv  15N_R1p_850_50_10_278.csv  15N_R1p_850_50_10_291.csv  15N_R1p_850_50_10_299.csv  csisoN.csv  demf.dx  demft.dx  egaf.dx  egaft.dx  emf.dx  emft.dx  gaf.dx  model.dx  or_CCAc.csv  or_CCAp.csv  or_CCSAxx.csv  or_CNH.csv  or_NCSAyy.csv  or_NH.csv  s2_CC_dipolar_jozef_DOPxlsx.csv  s2_CH_dipolar_jozef_DOPxlsx.csv  s2_CN_dipolar_jozef_DOPxlsx.csv  (+6 more)
utils/: 600_res_aicbic.py  aicbic.py  bmrb_to_csiso.py  calc.py  calc_D.py  combine_aicbic.py  concat.py  convert_op.py  gaffit.py  gaffit_plot.py  gaffitic.py  gen_attr.py  gen_optimal.py  gen_pp_lienin.py  models.py  plot.py  plot_aicbic.py  plot_relax.py  pp_demf.m  pp_demf_e.m  pp_demft.m  pp_demft_e.m  pp_egaf.m  pp_egaf_e.m  pp_egaft.m  pp_egaft_e.m  pp_emf.m  pp_emf_e.m  pp_emft.m  pp_emft_e.m  pp_gaf.m  pp_gaf_e.m  pp_gaft.m  pp_gaft_e.m  pp_gmf.m  pp_gmft.m  pp_rdemft.m  (+17 more)
(+198 files in other folders)
